syntax = "proto3";

package calculator;

service Calculator {
  rpc Add (AddRequest) returns (AddReply) {}
  rpc Subtract (SubtractRequest) returns (SubtractReply) {}
}

message AddRequest {
  float a = 1;
  float b = 2;
}

message AddReply {
  float result = 1;
}

message SubtractRequest {
  float a = 1;
  float b = 2;
}

message SubtractReply {
  float result = 1;
}
